# flask-travisCI

./: .gitignore  .travis.yml  api_test.http  pyproject.toml  requirements.txt
app/: __init__.py  expense.py  swagger_bp.py  user.py
instance/: expenses.sqlite3  test.db
migrations/versions/: 08cbb54ebaff_.py
tests/: conftest.py  espense_test.py  user_test.py
